--- a/index.html
+++ b/index.html
@@ -25,24 +25,32 @@
 
                 <div class="right">
                     <div class="bookPhotos">
-                        <a href="" class ="book1">
-                            <img src="/Users/jiwoongkim/Documents/Paged/photos/books/당신의별자리는무엇인가요.jpeg" 
+
+                        <div href="" class ="book1">
+                            <a href="">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/당신의별자리는무엇인가요.jpeg" 
                                 alt="">
-                            <h3>당신의 별자리는 무엇인가요</h3>
-                            <p>This is the first paragraph</p>
-                        </a>                        
+                            <!-- <h3>당신의 별자리는 무엇인가요</h3>
+                            <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>                        
 
-                        <a href="" class ="book2">
-                            <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
-                            <h3>그리움은 모두 북유럽에서 왔다</h3>
-                            <p>This is the first paragraph</p>
-                        </a>
+                        <div href="" class ="book2">
+                            <a href="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
+                                <!-- <h3>그리움은 모두 북유럽에서 왔다</h3>
+                                <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>
 
-                        <a href="" class ="book3">
-                            <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
-                            <h3>This is book title</h3>
-                            <p>This is the first paragraph</p>
-                        </a>
+                        <div href="" class ="book3">
+                            <a href="">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
+                                <!-- <h3>This is book title</h3>
+                                <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>
+
                     </div>  
                 </div>
             </section>
