--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nanum+Gothic+Coding|Sunflower:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nanum+Gothic+Coding|Sunflower:300&display=swap" rel="stylesheet">    
     <title>Paged</title>
 </head>
 <body>
 
         <div class="wrapper">
             <!-- <header>Paged</header> -->
-            <section class = "content">        
+            <section class = "section1">        
                 <div class="left">
                     <span class = "avatar"> 
                         <img 
@@ -52,10 +52,23 @@
                         </div>
 
                     </div>  
+
+                    <div id="firstPage">
+                        <a class ="firstPageClick" href="">we are the one</a>
+                    </div>
+
                 </div>
             </section>
+
+
+            <section class = "section">
+                <div id="secondPage">
+                    <a class ="secondPageClick" href=""></a>
+                </div>
+            </section>
+
         <footer>This is footer</footer>
     </div>
-
+    <script src="app.js"></script>
 </body>
 </html>
