Modify: Added background image in the second half page and implemented the smooth scroll function(In progress)

--- a/index.html
+++ b/index.html
@@ -61,14 +61,55 @@
             </section>
 
 
-            <section class = "section">
-                <div id="secondPage">
-                    <a class ="secondPageClick" href=""></a>
+            <section class = "section2">
+
+                <div class="inner">
+                    <div class="bookPhotos">
+
+                        <div href="" class ="book4">
+                            <a href="">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/당신의별자리는무엇인가요.jpeg" 
+                                alt="">
+                            <!-- <h3>당신의 별자리는 무엇인가요</h3>
+                            <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>                        
+
+                        <div href="" class ="book5">
+                            <a href="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
+                                <!-- <h3>그리움은 모두 북유럽에서 왔다</h3>
+                                <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>
+
+                        <div href="" class ="book6">
+                            <a href="">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/그리움은모두북유럽에서왔다.jpeg" alt="">
+                                <!-- <h3>This is book title</h3>
+                                <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>
+
+                        <div href="" class ="book7">
+                            <a href="">
+                                <img src="/Users/jiwoongkim/Documents/Paged/photos/books/당신의별자리는무엇인가요.jpeg" 
+                                alt="">
+                            <!-- <h3>당신의 별자리는 무엇인가요</h3>
+                            <p>This is the first paragraph</p> -->
+                            </a>
+                        </div>                        
+                    </div>  
+
+                    <div id="secondPage">
+                        <a class ="secondPageClick" href="">This is second click</a>
+                    </div>
                 </div>
+                
             </section>
 
-        <footer>This is footer</footer>
-    </div>
+            <!-- <footer>This is footer</footer> -->
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
