--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>  
 
                     <div id="firstPage">
-                        <a class ="firstPageClick" href="">we are the one</a>
+                        <a class ="firstPageClick" href="#">we are the one</a>
                     </div>
 
                 </div>
@@ -102,7 +102,7 @@
                     </div>  
 
                     <div id="secondPage">
-                        <a class ="secondPageClick" href="">This is second click</a>
+                        <a class ="secondPageClick" href="#">This is second click</a>
                     </div>
                 </div>
                 
