Add : Added fontello file for down arrow pictogram

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="fontello-68c7711f/css/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nanum+Gothic+Coding|Sunflower:300&display=swap" rel="stylesheet">    
     <title>Paged</title>
 </head>
 <body>
-
         <div class="wrapper">
             <!-- <header>Paged</header> -->
             <section class = "section1">        
@@ -53,8 +53,8 @@
 
                     </div>  
 
-                    <div id="firstPage">
-                        <a class ="firstPageClick" href="#">we are the one</a>
+                    <div class="firstPage">
+                        <a class ="icon-down-circled" href="#"><span class="icon">we are</span></a>
                     </div>
 
                 </div>
@@ -101,8 +101,8 @@
                         </div>                        
                     </div>  
 
-                    <div id="secondPage">
-                        <a class ="secondPageClick" href="#">This is second click</a>
+                    <div class="secondPage">
+                        <a class ="icon-down-circled" href="#"> <span class="icon">This is second click</span> </a>
                     </div>
                 </div>
                 
