Add : Added fontello files and modified arrow pictogram

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="fontello-68c7711f/css/fontello.css">
+    <link rel="stylesheet" href="fontello-43f9b9ae/css/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nanum+Gothic+Coding|Sunflower:300&display=swap" rel="stylesheet">    
     <title>Paged</title>
 </head>
@@ -54,7 +54,7 @@
                     </div>  
 
                     <div class="firstPage">
-                        <a class ="icon-down-circled" href="#"><span class="icon">we are</span></a>
+                        <a class ="icon-down-big" href="#"><span class="icon">we are</span></a>
                     </div>
 
                 </div>
@@ -102,7 +102,7 @@
                     </div>  
 
                     <div class="secondPage">
-                        <a class ="icon-down-circled" href="#"> <span class="icon">This is second click</span> </a>
+                        <a class ="icon-down-big" href="#"><span class="icon">This is second click</span></a>
                     </div>
                 </div>
                 
